feat: add serverconf and SS identifiers entity classes
Refs: XRDDEV-2805